[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["ThomasStalley <tstalley@realla.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

